# virotaxa

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/virotaxa/: __init__.py  cli.py  constants.py
src/virotaxa/cache/: __init__.py  registry.py
src/virotaxa/catalog/: __init__.py  builder.py  metadata.py  validate.py
src/virotaxa/genome/: __init__.py  fetch.py  metadata.py
src/virotaxa/vhdb/: __init__.py  download.py  filters.py  parse.py  taxonomy.py
tests/: conftest.py  test_cache.py  test_catalog.py  test_filters.py  test_genome.py
