[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virotaxa"
version = "0.1.0"
description = "Reproducible viral taxa selection from Virus-Host Database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Scott A. Handley", email = "shandley@wustl.edu" },
]
keywords = [
    "virology",
    "bioinformatics",
    "virus",
    "taxonomy",
    "reproducibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=2.0",
    "httpx>=0.24",
    "typer>=0.9",
    "rich>=13.0",
    "biopython>=1.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pandas-stubs",
]

[project.scripts]
virotaxa = "virotaxa.cli:app"

[project.urls]
Homepage = "https://github.com/shandley/virotaxa"
Repository = "https://github.com/shandley/virotaxa"
Issues = "https://github.com/shandley/virotaxa/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/virotaxa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=virotaxa --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
